# aslp

./: .gitignore  README.md  asli.opam  coverage.sh  dune-project
.github/workflows/: opam.yml  test.yml
docs/: offline.md  online.md  readme.md  testing.md  vectoriser.md
lib/resources/: dune  resources.mli
libASL/: abstract.ml  abstract_interface.ml  additional.ml  arm_env.ml  asl_utils.ml  asl_visitor.ml  cpp_backend.ml  cpu.ml  cpu.mli  decoder_program.ml  dis.ml  dis_config.ml  dune  eval.ml  impl.ml  libASL.ml  loadASL.ml  loadASL.mli  ocaml_backend.ml  offline_opt.ml  offline_transform.ml  real.ml  scala_backend.ml  sem.ml  sem.mli  symbolic.ml  symbolic_lifter.ml  tcheck.ml  testing.ml  transforms.ml  utils.ml  value.ml
libASL/support/: dune  solver.mli
libASL/support/native/: dune  solver.ml
libASL/support/web/: dune  solver.ml
offlineASL/: dune  offline.ml  utils.ml
offlineASL-cpp/: .gitignore  CMakeLists.txt  README.md  aslp_lifter.hpp  aslp_lifter_base.cpp  aslp_lifter_base.hpp  aslp_lifter_impl.hpp  build.sh  builder.cpp  check.py  dune  interface.hpp  llvm_interface.cpp  llvm_interface.hpp  llvm_lifter.cpp  llvm_lifter_traits.hpp  main.cpp  meson.build
offlineASL-cpp/aslp-lifter-gen/: CMakeLists.txt  aslp-lifter-gen.pc.in
offlineASL-cpp/aslp-lifter-instantiate/include/: llvm_interface.hpp
offlineASL-cpp/cmake/: llvm.cmake  prelude.cmake
offlineASL-cpp/subprojects/aslp-lifter/: meson.build  meson.build.in
offlineASL-cpp/subprojects/aslp-lifter-gen/: aslp-lifter-gen.pc.in  meson.build
offlineASL-cpp/subprojects/aslp-lifter-gen/include/aslp/: interface.hpp
offlineASL-cpp/subprojects/aslp-lifter-instantiate/: meson.build
offlineASL-cpp/subprojects/aslp-lifter-instantiate/include/aslp/: llvm_interface.hpp  llvm_lifter_traits.hpp
offlineASL-cpp/subprojects/aslp-lifter-instantiate/pch/: cpp_pch.hpp
offlineASL-cpp/subprojects/aslp-lifter-llvm/: meson.build
offlineASL-scala/: TrivialLifter.scala  make_trivial.py  readme.md
offlineASL-scala/main/src/: Main.scala  NoneLifter.scala  TrivialLifter.scala
scalaOfflineASL/: build.sc  readme.md
scalaOfflineASL/src/: Main.scala  utils.scala
scalaOfflineASL/src/ir/: Expr.scala  ILtoIL.scala  IRCursor.scala
scripts/: coverage.sh  lint.py  stash.sh
stagecompare/: aarch64_float_move_fp_imm-stage2 callgraph  aarch64_float_move_fp_imm-stage3 simplify  aarch64_float_move_fp_imm-stage4 specialise  aarch64_float_move_fp_imm-stage5 disas  aarch64_float_move_fp_imm-stage7-8 offline transform
tests/: dune  override.asl  override.prj  test.prj  test_asl.ml
tests/aslt/: test_antlr.t  test_dis.t
web/: aslp.js  dune  index.html  js.ml  v.mli
web/impl/: dune  v.ml
