(ocamllex lexer)

(menhir
 (modules asl_parser)
 (flags (--explain)))

(rule
 (targets asl_parser_pp.ml asl_parser.mly asl_lexer.mll asl_ast.ml)
 (deps   asl.ott)
 (action
   (progn
     (run ott -aux_style_rules false -tex_wrap true -quotient_rules false -i asl.ott -o asl_parser_head.mly -o asl_lexer.mll -o asl_ast.ml)
     (run mv asl_parser_head_pp.ml asl_parser_pp.ml)
     (with-stdout-to asl_parser_tail.mly (bash "OTT=${ASLI_OTT:-$(opam config var ott:share)};  grep -v '^%%' $OTT/menhir_library_extra.mly"))
     (with-stdout-to asl_parser.mly (run cat asl_parser_head.mly asl_parser_tail.mly)))))

(library
 (name libASL_ast)
 (public_name asli.libASL-ast)
 (flags (:standard -w -27))
 (wrapped false)
 (modules asl_ast asl_parser asl_parser_pp asl_utils asl_visitor visitor utils)
 (libraries pprint (re_export zarith)))

(library
 (name libASL)
 (public_name asli.libASL)
 (flags
  (:standard -w -27 -cclib -lstdc++))
 (modules cpu dis elf eval
   lexer lexersupport loadASL monad primops rws symbolic tcheck testing transforms value
   symbolic_lifter decoder_program call_graph req_analysis
   offline_transform ocaml_backend dis_tc offline_opt
   arm_env
   )
 (preprocessor_deps (alias ../asl_files))
 (preprocess (pps ppx_blob))
 (libraries libASL_support (re_export libASL_ast) str))

