(library
  (name offlineASL)
  (flags
    (:standard -w -27 -w -33 -cclib -lstdc++))
  (modules 
    offline
    decode_tests
    aarch64_vector_transfer_vector_table
    aarch64_vector_transfer_vector_permute_zip
    aarch64_vector_transfer_vector_permute_unzip
    aarch64_vector_transfer_vector_permute_transpose
    aarch64_vector_transfer_vector_insert
    aarch64_vector_transfer_vector_extract
    aarch64_vector_transfer_vector_cpy_dup_sisd
    aarch64_vector_transfer_vector_cpy_dup_simd
    aarch64_vector_transfer_integer_move_unsigned
    aarch64_vector_transfer_integer_move_signed
    aarch64_vector_transfer_integer_insert
    aarch64_vector_transfer_integer_dup
    aarch64_vector_shift_right_sisd
    aarch64_vector_shift_right_simd
    aarch64_vector_shift_right_narrow_uniform_sisd
    aarch64_vector_shift_right_narrow_uniform_simd
    aarch64_vector_shift_right_narrow_nonuniform_sisd
    aarch64_vector_shift_right_narrow_nonuniform_simd
    aarch64_vector_shift_right_narrow_logical
    aarch64_vector_shift_right_insert_sisd
    aarch64_vector_shift_right_insert_simd
    aarch64_vector_shift_left_sisd
    aarch64_vector_shift_left_simd
    aarch64_vector_shift_left_sat_sisd
    aarch64_vector_shift_left_sat_simd
    aarch64_vector_shift_left_long
    aarch64_vector_shift_left_insert_sisd
    aarch64_vector_shift_left_insert_simd
    aarch64_vector_shift_conv_int_sisd
    aarch64_vector_shift_conv_int_simd
    aarch64_vector_shift_conv_float_sisd
    aarch64_vector_shift_conv_float_simd
    aarch64_vector_reduce_int_max
    aarch64_vector_reduce_fp_maxnm_sisd
    aarch64_vector_reduce_fp_maxnm_simd
    aarch64_vector_reduce_fp_max_sisd
    aarch64_vector_reduce_fp_max_simd
    aarch64_vector_reduce_fp_add_sisd
    aarch64_vector_reduce_fp16_maxnm_sisd
    aarch64_vector_reduce_fp16_maxnm_simd
    aarch64_vector_reduce_fp16_max_sisd
    aarch64_vector_reduce_fp16_max_simd
    aarch64_vector_reduce_fp16_add_sisd
    aarch64_vector_reduce_add_sisd
    aarch64_vector_reduce_add_simd
    aarch64_vector_reduce_add_long
    aarch64_vector_logical
    aarch64_vector_fp16_movi
    aarch64_vector_cvt_bf16_vector
    aarch64_vector_cvt_bf16_scalar
    aarch64_vector_crypto_sm4_sm4enckey
    aarch64_vector_crypto_sm4_sm4enc
    aarch64_vector_crypto_sm3_sm3tt2b
    aarch64_vector_crypto_sm3_sm3tt2a
    aarch64_vector_crypto_sm3_sm3tt1b
    aarch64_vector_crypto_sm3_sm3tt1a
    aarch64_vector_crypto_sm3_sm3ss1
    aarch64_vector_crypto_sm3_sm3partw2
    aarch64_vector_crypto_sm3_sm3partw1
    aarch64_vector_crypto_sha512_sha512su1
    aarch64_vector_crypto_sha512_sha512su0
    aarch64_vector_crypto_sha512_sha512h2
    aarch64_vector_crypto_sha512_sha512h
    aarch64_vector_crypto_sha3op_sha256_sched1
    aarch64_vector_crypto_sha3op_sha256_hash
    aarch64_vector_crypto_sha3op_sha1_sched0
    aarch64_vector_crypto_sha3op_sha1_hash_parity
    aarch64_vector_crypto_sha3op_sha1_hash_majority
    aarch64_vector_crypto_sha3op_sha1_hash_choose
    aarch64_vector_crypto_sha3_xar
    aarch64_vector_crypto_sha3_rax1
    aarch64_vector_crypto_sha3_eor3
    aarch64_vector_crypto_sha3_bcax
    aarch64_vector_crypto_sha2op_sha256_sched0
    aarch64_vector_crypto_sha2op_sha1_sched1
    aarch64_vector_crypto_sha2op_sha1_hash
    aarch64_vector_crypto_aes_round
    aarch64_vector_crypto_aes_mix
    aarch64_vector_bfmmla
    aarch64_vector_arithmetic_unary_special_sqrt_fp16
    aarch64_vector_arithmetic_unary_special_sqrt_est_int
    aarch64_vector_arithmetic_unary_special_sqrt_est_fp16_sisd
    aarch64_vector_arithmetic_unary_special_sqrt_est_fp16_simd
    aarch64_vector_arithmetic_unary_special_sqrt_est_float_sisd
    aarch64_vector_arithmetic_unary_special_sqrt_est_float_simd
    aarch64_vector_arithmetic_unary_special_sqrt
    aarch64_vector_arithmetic_unary_special_recip_int
    aarch64_vector_arithmetic_unary_special_recip_fp16_sisd
    aarch64_vector_arithmetic_unary_special_recip_fp16_simd
    aarch64_vector_arithmetic_unary_special_recip_float_sisd
    aarch64_vector_arithmetic_unary_special_recip_float_simd
    aarch64_vector_arithmetic_unary_special_frecpx_fp16
    aarch64_vector_arithmetic_unary_special_frecpx
    aarch64_vector_arithmetic_unary_shift
    aarch64_vector_arithmetic_unary_rev
    aarch64_vector_arithmetic_unary_rbit
    aarch64_vector_arithmetic_unary_not
    aarch64_vector_arithmetic_unary_fp16_round
    aarch64_vector_arithmetic_unary_fp16_conv_int_sisd
    aarch64_vector_arithmetic_unary_fp16_conv_int_simd
    aarch64_vector_arithmetic_unary_fp16_conv_float_tieaway_sisd
    aarch64_vector_arithmetic_unary_fp16_conv_float_tieaway_simd
    aarch64_vector_arithmetic_unary_fp16_conv_float_bulk_sisd
    aarch64_vector_arithmetic_unary_fp16_conv_float_bulk_simd
    aarch64_vector_arithmetic_unary_float_xtn_sisd
    aarch64_vector_arithmetic_unary_float_xtn_simd
    aarch64_vector_arithmetic_unary_float_widen
    aarch64_vector_arithmetic_unary_float_round_frint_32_64
    aarch64_vector_arithmetic_unary_float_round
    aarch64_vector_arithmetic_unary_float_narrow
    aarch64_vector_arithmetic_unary_float_conv_int_sisd
    aarch64_vector_arithmetic_unary_float_conv_int_simd
    aarch64_vector_arithmetic_unary_float_conv_float_tieaway_sisd
    aarch64_vector_arithmetic_unary_float_conv_float_tieaway_simd
    aarch64_vector_arithmetic_unary_float_conv_float_bulk_sisd
    aarch64_vector_arithmetic_unary_float_conv_float_bulk_simd
    aarch64_vector_arithmetic_unary_extract_sqxtun_sisd
    aarch64_vector_arithmetic_unary_extract_sqxtun_simd
    aarch64_vector_arithmetic_unary_extract_sat_sisd
    aarch64_vector_arithmetic_unary_extract_sat_simd
    aarch64_vector_arithmetic_unary_extract_nosat
    aarch64_vector_arithmetic_unary_diff_neg_sat_sisd
    aarch64_vector_arithmetic_unary_diff_neg_sat_simd
    aarch64_vector_arithmetic_unary_diff_neg_int_sisd
    aarch64_vector_arithmetic_unary_diff_neg_int_simd
    aarch64_vector_arithmetic_unary_diff_neg_fp16
    aarch64_vector_arithmetic_unary_diff_neg_float
    aarch64_vector_arithmetic_unary_cnt
    aarch64_vector_arithmetic_unary_cmp_int_lessthan_sisd
    aarch64_vector_arithmetic_unary_cmp_int_lessthan_simd
    aarch64_vector_arithmetic_unary_cmp_int_bulk_sisd
    aarch64_vector_arithmetic_unary_cmp_int_bulk_simd
    aarch64_vector_arithmetic_unary_cmp_fp16_lessthan_sisd
    aarch64_vector_arithmetic_unary_cmp_fp16_lessthan_simd
    aarch64_vector_arithmetic_unary_cmp_fp16_bulk_sisd
    aarch64_vector_arithmetic_unary_cmp_fp16_bulk_simd
    aarch64_vector_arithmetic_unary_cmp_float_lessthan_sisd
    aarch64_vector_arithmetic_unary_cmp_float_lessthan_simd
    aarch64_vector_arithmetic_unary_cmp_float_bulk_sisd
    aarch64_vector_arithmetic_unary_cmp_float_bulk_simd
    aarch64_vector_arithmetic_unary_clsz
    aarch64_vector_arithmetic_unary_add_saturating_sisd
    aarch64_vector_arithmetic_unary_add_saturating_simd
    aarch64_vector_arithmetic_unary_add_pairwise
    aarch64_vector_arithmetic_binary_uniform_sub_saturating_sisd
    aarch64_vector_arithmetic_binary_uniform_sub_saturating_simd
    aarch64_vector_arithmetic_binary_uniform_sub_int
    aarch64_vector_arithmetic_binary_uniform_sub_fp_sisd
    aarch64_vector_arithmetic_binary_uniform_sub_fp_simd
    aarch64_vector_arithmetic_binary_uniform_sub_fp16_sisd
    aarch64_vector_arithmetic_binary_uniform_sub_fp16_simd
    aarch64_vector_arithmetic_binary_uniform_shift_sisd
    aarch64_vector_arithmetic_binary_uniform_shift_simd
    aarch64_vector_arithmetic_binary_uniform_rsqrts_sisd
    aarch64_vector_arithmetic_binary_uniform_rsqrts_simd
    aarch64_vector_arithmetic_binary_uniform_rsqrts_fp16_sisd
    aarch64_vector_arithmetic_binary_uniform_rsqrts_fp16_simd
    aarch64_vector_arithmetic_binary_uniform_recps_sisd
    aarch64_vector_arithmetic_binary_uniform_recps_simd
    aarch64_vector_arithmetic_binary_uniform_recps_fp16_sisd
    aarch64_vector_arithmetic_binary_uniform_recps_fp16_simd
    aarch64_vector_arithmetic_binary_uniform_mul_int_product
    aarch64_vector_arithmetic_binary_uniform_mul_int_doubling_sisd
    aarch64_vector_arithmetic_binary_uniform_mul_int_doubling_simd
    aarch64_vector_arithmetic_binary_uniform_mul_int_doubling_accum_sisd
    aarch64_vector_arithmetic_binary_uniform_mul_int_doubling_accum_simd
    aarch64_vector_arithmetic_binary_uniform_mul_int_dotp
    aarch64_vector_arithmetic_binary_uniform_mul_int_bfdot
    aarch64_vector_arithmetic_binary_uniform_mul_int_accum
    aarch64_vector_arithmetic_binary_uniform_mul_fp_product
    aarch64_vector_arithmetic_binary_uniform_mul_fp_mul_norounding_upper
    aarch64_vector_arithmetic_binary_uniform_mul_fp_mul_norounding_lower
    aarch64_vector_arithmetic_binary_uniform_mul_fp_fused
    aarch64_vector_arithmetic_binary_uniform_mul_fp_extended_sisd
    aarch64_vector_arithmetic_binary_uniform_mul_fp_extended_simd
    aarch64_vector_arithmetic_binary_uniform_mul_fp_complex
    aarch64_vector_arithmetic_binary_uniform_mul_fp16_product
    aarch64_vector_arithmetic_binary_uniform_mul_fp16_fused
    aarch64_vector_arithmetic_binary_uniform_mul_fp16_extended_sisd
    aarch64_vector_arithmetic_binary_uniform_mul_fp16_extended_simd
    aarch64_vector_arithmetic_binary_uniform_mul_acc_bf16_long
    aarch64_vector_arithmetic_binary_uniform_max_min_single
    aarch64_vector_arithmetic_binary_uniform_max_min_pair
    aarch64_vector_arithmetic_binary_uniform_max_min_fp_2008
    aarch64_vector_arithmetic_binary_uniform_max_min_fp_1985
    aarch64_vector_arithmetic_binary_uniform_max_min_fp16_2008
    aarch64_vector_arithmetic_binary_uniform_max_min_fp16_1985
    aarch64_vector_arithmetic_binary_uniform_mat_mul_int_usdot
    aarch64_vector_arithmetic_binary_uniform_mat_mul_int_mla
    aarch64_vector_arithmetic_binary_uniform_logical_bsl_eor
    aarch64_vector_arithmetic_binary_uniform_logical_and_orr
    aarch64_vector_arithmetic_binary_uniform_div_fp16
    aarch64_vector_arithmetic_binary_uniform_div
    aarch64_vector_arithmetic_binary_uniform_diff
    aarch64_vector_arithmetic_binary_uniform_cmp_int_sisd
    aarch64_vector_arithmetic_binary_uniform_cmp_int_simd
    aarch64_vector_arithmetic_binary_uniform_cmp_fp_sisd
    aarch64_vector_arithmetic_binary_uniform_cmp_fp_simd
    aarch64_vector_arithmetic_binary_uniform_cmp_fp16_sisd
    aarch64_vector_arithmetic_binary_uniform_cmp_fp16_simd
    aarch64_vector_arithmetic_binary_uniform_cmp_bitwise_sisd
    aarch64_vector_arithmetic_binary_uniform_cmp_bitwise_simd
    aarch64_vector_arithmetic_binary_uniform_add_wrapping_single_sisd
    aarch64_vector_arithmetic_binary_uniform_add_wrapping_single_simd
    aarch64_vector_arithmetic_binary_uniform_add_wrapping_pair
    aarch64_vector_arithmetic_binary_uniform_add_saturating_sisd
    aarch64_vector_arithmetic_binary_uniform_add_saturating_simd
    aarch64_vector_arithmetic_binary_uniform_add_halving_truncating
    aarch64_vector_arithmetic_binary_uniform_add_halving_rounding
    aarch64_vector_arithmetic_binary_uniform_add_fp_complex
    aarch64_vector_arithmetic_binary_uniform_add_fp16
    aarch64_vector_arithmetic_binary_uniform_add_fp
    aarch64_vector_arithmetic_binary_element_mul_long
    aarch64_vector_arithmetic_binary_element_mul_int
    aarch64_vector_arithmetic_binary_element_mul_high_sisd
    aarch64_vector_arithmetic_binary_element_mul_high_simd
    aarch64_vector_arithmetic_binary_element_mul_fp_sisd
    aarch64_vector_arithmetic_binary_element_mul_fp_simd
    aarch64_vector_arithmetic_binary_element_mul_fp16_sisd
    aarch64_vector_arithmetic_binary_element_mul_fp16_simd
    aarch64_vector_arithmetic_binary_element_mul_double_sisd
    aarch64_vector_arithmetic_binary_element_mul_double_simd
    aarch64_vector_arithmetic_binary_element_mul_acc_mul_norounding_i_upper
    aarch64_vector_arithmetic_binary_element_mul_acc_mul_norounding_i_lower
    aarch64_vector_arithmetic_binary_element_mul_acc_long
    aarch64_vector_arithmetic_binary_element_mul_acc_int
    aarch64_vector_arithmetic_binary_element_mul_acc_high_sisd
    aarch64_vector_arithmetic_binary_element_mul_acc_high_simd
    aarch64_vector_arithmetic_binary_element_mul_acc_fp_sisd
    aarch64_vector_arithmetic_binary_element_mul_acc_fp_simd
    aarch64_vector_arithmetic_binary_element_mul_acc_fp16_sisd
    aarch64_vector_arithmetic_binary_element_mul_acc_fp16_simd
    aarch64_vector_arithmetic_binary_element_mul_acc_double_sisd
    aarch64_vector_arithmetic_binary_element_mul_acc_double_simd
    aarch64_vector_arithmetic_binary_element_mul_acc_complex
    aarch64_vector_arithmetic_binary_element_mul_acc_bf16_long
    aarch64_vector_arithmetic_binary_element_mat_mul_int_dotp
    aarch64_vector_arithmetic_binary_element_dotp
    aarch64_vector_arithmetic_binary_element_bfdot
    aarch64_vector_arithmetic_binary_disparate_mul_product
    aarch64_vector_arithmetic_binary_disparate_mul_poly
    aarch64_vector_arithmetic_binary_disparate_mul_double_sisd
    aarch64_vector_arithmetic_binary_disparate_mul_double_simd
    aarch64_vector_arithmetic_binary_disparate_mul_dmacc_sisd
    aarch64_vector_arithmetic_binary_disparate_mul_dmacc_simd
    aarch64_vector_arithmetic_binary_disparate_mul_accum
    aarch64_vector_arithmetic_binary_disparate_diff
    aarch64_vector_arithmetic_binary_disparate_add_sub_wide
    aarch64_vector_arithmetic_binary_disparate_add_sub_narrow
    aarch64_vector_arithmetic_binary_disparate_add_sub_long
    aarch64_udf
    aarch64_system_sysops
    aarch64_system_monitors
    aarch64_system_exceptions_runtime_hvc
    aarch64_system_exceptions_debug_halt
    aarch64_system_exceptions_debug_breakpoint
    aarch64_system_barriers_ssbb
    aarch64_system_barriers_sb
    aarch64_system_barriers_pssbb
    aarch64_system_barriers_isb
    aarch64_system_barriers_dsb
    aarch64_system_barriers_dmb
    aarch64_memory_vector_single_post_inc
    aarch64_memory_vector_single_no_wb
    aarch64_memory_vector_multiple_post_inc
    aarch64_memory_vector_multiple_no_wb
    aarch64_memory_single_simdfp_register
    aarch64_memory_single_simdfp_immediate_unsigned
    aarch64_memory_single_simdfp_immediate_signed_pre_idx
    aarch64_memory_single_simdfp_immediate_signed_post_idx
    aarch64_memory_single_simdfp_immediate_signed_offset_normal
    aarch64_memory_single_general_register
    aarch64_memory_single_general_immediate_unsigned
    aarch64_memory_single_general_immediate_signed_pre_idx
    aarch64_memory_single_general_immediate_signed_post_idx
    aarch64_memory_single_general_immediate_signed_pac
    aarch64_memory_single_general_immediate_signed_offset_unpriv
    aarch64_memory_single_general_immediate_signed_offset_normal
    aarch64_memory_single_general_immediate_signed_offset_lda_stl
    aarch64_memory_pair_simdfp_pre_idx
    aarch64_memory_pair_simdfp_post_idx
    aarch64_memory_pair_simdfp_offset
    aarch64_memory_pair_simdfp_no_alloc
    aarch64_memory_pair_general_pre_idx
    aarch64_memory_pair_general_post_idx
    aarch64_memory_pair_general_offset
    aarch64_memory_pair_general_no_alloc
    aarch64_memory_ordered_rcpc
    aarch64_memory_ordered
    aarch64_memory_literal_simdfp
    aarch64_memory_literal_general
    aarch64_memory_exclusive_single
    aarch64_memory_exclusive_pair
    aarch64_memory_atomicops_swp
    aarch64_memory_atomicops_ld
    aarch64_memory_atomicops_cas_single
    aarch64_memory_atomicops_cas_pair
    aarch64_integer_tags_mcsubtag
    aarch64_integer_tags_mcsettagpre
    aarch64_integer_tags_mcsettagpost
    aarch64_integer_tags_mcsettagpairpre
    aarch64_integer_tags_mcsettagpairpost
    aarch64_integer_tags_mcsettagpairandzerodatapre
    aarch64_integer_tags_mcsettagpairandzerodatapost
    aarch64_integer_tags_mcsettagpairandzerodata
    aarch64_integer_tags_mcsettagpair
    aarch64_integer_tags_mcsettagarray
    aarch64_integer_tags_mcsettagandzerodatapre
    aarch64_integer_tags_mcsettagandzerodatapost
    aarch64_integer_tags_mcsettagandzerodata
    aarch64_integer_tags_mcsettagandzeroarray
    aarch64_integer_tags_mcsettaganddatapairpre
    aarch64_integer_tags_mcsettaganddatapairpost
    aarch64_integer_tags_mcsettaganddatapair
    aarch64_integer_tags_mcsettag
    aarch64_integer_tags_mcinserttagmask
    aarch64_integer_tags_mcinsertrandomtag
    aarch64_integer_tags_mcgettagarray
    aarch64_integer_tags_mcgettag
    aarch64_integer_tags_mcaddtag
    aarch64_integer_shift_variable
    aarch64_integer_pac_pacib_hint
    aarch64_integer_pac_pacib_dp_1src
    aarch64_integer_pac_pacia_hint
    aarch64_integer_pac_pacia_dp_1src
    aarch64_integer_pac_pacdb_dp_1src
    aarch64_integer_pac_pacda_dp_1src
    aarch64_integer_pac_autib_hint
    aarch64_integer_pac_autib_dp_1src
    aarch64_integer_pac_autia_hint
    aarch64_integer_pac_autia_dp_1src
    aarch64_integer_pac_autdb_dp_1src
    aarch64_integer_pac_autda_dp_1src
    aarch64_integer_logical_shiftedreg
    aarch64_integer_logical_immediate
    aarch64_integer_ins_ext_insert_movewide
    aarch64_integer_ins_ext_extract_immediate
    aarch64_integer_flags_xaflag
    aarch64_integer_flags_setf
    aarch64_integer_flags_rmif
    aarch64_integer_flags_cfinv
    aarch64_integer_flags_axflag
    aarch64_integer_crc
    aarch64_integer_conditional_select
    aarch64_integer_conditional_compare_register
    aarch64_integer_conditional_compare_immediate
    aarch64_integer_bitfield
    aarch64_integer_arithmetic_rev
    aarch64_integer_arithmetic_rbit
    aarch64_integer_arithmetic_pointer_mcsubtracttaggedaddresssetflags
    aarch64_integer_arithmetic_pointer_mcsubtracttaggedaddress
    aarch64_integer_arithmetic_mul_widening_64_128hi
    aarch64_integer_arithmetic_mul_widening_32_64
    aarch64_integer_arithmetic_mul_uniform_add_sub
    aarch64_integer_arithmetic_div
    aarch64_integer_arithmetic_cnt
    aarch64_integer_arithmetic_address_pc_rel
    aarch64_integer_arithmetic_add_sub_shiftedreg
    aarch64_integer_arithmetic_add_sub_immediate
    aarch64_integer_arithmetic_add_sub_extendedreg
    aarch64_integer_arithmetic_add_sub_carry
    aarch64_float_move_fp_select
    aarch64_float_move_fp_imm
    aarch64_float_convert_int
    aarch64_float_convert_fp
    aarch64_float_convert_fix
    aarch64_float_compare_uncond
    aarch64_float_compare_cond
    aarch64_float_arithmetic_unary
    aarch64_float_arithmetic_round_frint_32_64
    aarch64_float_arithmetic_round_frint
    aarch64_float_arithmetic_mul_product
    aarch64_float_arithmetic_mul_add_sub
    aarch64_float_arithmetic_max_min
    aarch64_float_arithmetic_div
    aarch64_float_arithmetic_add_sub
    aarch64_branch_unconditional_register
    aarch64_branch_unconditional_immediate
    aarch64_branch_unconditional_eret
    aarch64_branch_unconditional_dret
    aarch64_branch_conditional_test
    aarch64_branch_conditional_cond
    aarch64_branch_conditional_compare
    utils
  )
  (libraries zarith libASL))