(executable
  (name js)
  (modes js)
  (modules js)
  (libraries boopimpl libASL libASLResources dune-site str zarith pprint zarith_stubs_js)
  (js_of_ocaml (flags --debug-info --no-inline :standard \ --source-map-inline))
  )

(library
 (name virtual)
 (modules v)
 (virtual_modules v))

(alias
 (name default)
 (deps js.bc.js index.html))
